--- a/app/scss/_contact.scss
+++ b/app/scss/_contact.scss
@@ -5,11 +5,13 @@
         display: flex;
         justify-content: center;
         align-items: center;
-     
-        
+       
+        a:hover{
+           border-radius: .5rem; 
+        }
     }
 
     &__item{
-        margin: .5rem .7rem;
+        padding: .5rem .5rem;
     }
 }
